--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -22,8 +22,10 @@
     },
     "tagsName": {
         "Parodies": "同人:",
+        "Characters":"角色:",
         "Tags": "標籤:",
         "Artists": "畫師:",
+        "Groups":"群組:",
         "Languages": "語言:",
         "Categories": "分類:",
         "Pages": "頁數:",
