--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -20,15 +20,20 @@
         "PopularNow": "當前熱門",
         "NewUploads": "最新上傳"
     },
-    "tagsName": {
-        "Parodies": "同人:",
-        "Characters":"角色:",
-        "Tags": "標籤:",
-        "Artists": "畫師:",
-        "Groups":"群組:",
-        "Languages": "語言:",
-        "Categories": "分類:",
-        "Pages": "頁數:",
-        "Uploaded": "上傳時間:"
+    "book": {
+        "tagsName": {
+            "Parodies": "同人:",
+            "Characters":"角色:",
+            "Tags": "標籤:",
+            "Artists": "畫師:",
+            "Groups":"群組:",
+            "Languages": "語言:",
+            "Categories": "分類:",
+            "Pages": "頁數:",
+            "Uploaded": "上傳時間:"
+        },
+        "buttons1":{
+            "top": "你必須登入才可以加到最愛"
+        }
     }
 }
