--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -32,11 +32,6 @@
             "Pages": "頁數:",
             "Uploaded": "上傳時間:"
         },
-        "buttons": {
-            "Download": "下載"
-        },
-        "buttons1":{
-            "top": "你必須登入才可以加到最愛"
-        }
+        "MoreLikeThis": "更多類似的"
     }
 }
