--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -33,5 +33,8 @@
             "Uploaded": "上傳時間:"
         },
         "MoreLikeThis": "更多類似的"
+    },
+    "Tags": {
+        "lolicon": "蘿莉控"
     }
 }
