--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -35,6 +35,14 @@
         "MoreLikeThis": "更多類似的"
     },
     "Tags": {
-        "lolicon": "蘿莉控"
+        "abortion": "墮胎",
+        "anal": "肛交",
+        "armpit": "腋下",
+        "asphyxiation": "窒息式性愛",
+        "bdsm": "- 皮繩愉虐",
+        "birth": "出產",
+        "blindfold": "蒙眼",
+        "blow job": "口交",
+        "body writing": "身體寫字"
     }
 }
