--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -43,6 +43,7 @@
         "birth": "出產",
         "blindfold": "蒙眼",
         "blowjob": "口交",
-        "body writing": "身體寫字"
+        "body writing": "身體寫字",
+        "stuck in wall": "卡在牆上"
     }
 }
