--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -44,6 +44,17 @@
         "blindfold": "蒙眼",
         "blowjob": "口交",
         "body writing": "身體寫字",
-        "stuck in wall": "卡在牆上"
+        "bondage": "束縛",
+        "breast feeding": "哺乳",
+        "bukkake": "大量發射",
+        "cheating": "偷情",
+        "cbt": "cbt",
+        "deepthroat": "深喉嚨",
+        "defloration": "破處",
+        "doujinshi": "同人誌",
+        "exhibitionism": "露出",
+        "facesitting": "顏面騎乘",
+        "femdom": "女調教男",
+        "lolicon": "蘿莉控"
     }
 }
