--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -39,7 +39,7 @@
         "anal": "肛交",
         "armpit": "腋下",
         "asphyxiation": "窒息式性愛",
-        "bdsm": "- 皮繩愉虐",
+        "bdsm": "皮繩愉虐",
         "birth": "出產",
         "blindfold": "蒙眼",
         "blowjob": "口交",
