--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -32,6 +32,7 @@
             "Pages": "頁數:",
             "Uploaded": "上傳時間:"
         },
+        "ShowMoreImagesButton": "顯示更多",
         "MoreLikeThis": "更多類似的"
     },
     "Tags": {
