--- a/nHentai-Translator/lang/zh_TW.json
+++ b/nHentai-Translator/lang/zh_TW.json
@@ -33,6 +33,7 @@
             "Uploaded": "上傳時間:"
         },
         "ShowMoreImagesButton": "顯示更多",
+        "ShowAllImagesButton": "顯示全部",
         "MoreLikeThis": "更多類似的"
     },
     "Tags": {
