--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -65,16 +65,52 @@
         "anal": "肛交",
         "armpit": "腋下",
         "asphyxiation": "窒息式性愛",
+        "alien": "外星人",
+        "angel": "天使",
+
         "bdsm": "皮繩愉虐",
         "birth": "出產",
+        "big ass": "豐臀",
+        "big balls": "巨睪丸",
+        "big breasts": "巨乳",
+        "big clit": "大陰蒂",
+        "big lips": "厚嘴唇",
+        "big nipples": "大乳頭",
+        "big penis": "巨屌",
+        "big vagina": "大陰道",
+        "bike shorts": "緊身短褲",
+        "bikini": "比基尼",
+        "blind": "失明",
         "blindfold": "蒙眼",
+        "blood": "血",
+        "bloomers": "燈籠褲",
         "blowjob": "口交",
+        "body modification": "肉體改造",
+        "body painting": "人體彩繪",
+        "body swap": "身體交換",
         "body writing": "身體寫字",
         "bondage": "束縛",
+        "braces": "牙套",
+        "brain fuck": "腦姦",
+        "breast expansion": "脹奶",
         "breast feeding": "哺乳",
+        "bride": "新娘",
+        "brother": "兄弟",
         "bukkake": "大量發射",
-        "cheating": "偷情",
+        "bull": "公牛",
+        "bunny boy": "兔男孩",
+        "bunny girl": "兔女郎",
+        "burping": "打嗝",
+        "business suit": "西裝",
+        "butler": "執事,男管家",
+
+        "cannibalism": "食人",
+        "cashier": "店員",
+        "catboy": "貓男孩",
+        "catfight": "兩女打鬥",
+        "catgirl": "貓娘",
         "cbt": "cbt",
+        "cheating": "偷情",
         "deepthroat": "深喉嚨",
         "defloration": "破處",
         "doujinshi": "同人誌",
