--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -110,13 +110,43 @@
         "catfight": "兩女打鬥",
         "catgirl": "貓娘",
         "cbt": "cbt",
+        "centaur": "半人馬",
+        "cervix penetration": "子宮頸插入",
+        "chastity belt": "貞操帶",
         "cheating": "偷情",
+        "cheerleader": "啦啦隊",
+        "chikan": "癡漢",
+        "chinese dress": "旗袍",
+        "christmas": "聖誕節",
+        "coach": "教練",
+        "cockslapping": "甩搧龜頭",
+        "collar": "項圈",
+        "compilation": "彙編",
+        "condom": "保險套",
+        "conjoined": "連體",
+        "coprophagia": "食糞",
+        "corruption": "墮落",
+        "corset": "馬甲",
+        "cosplaying": "角色扮演",
+        "cousin": "堂或表兄弟姐妹",
+        "cowgirl": "女牛仔",
+        "cowman": "牛男",
+        "crossdressing": "偽娘",
+        "cum in eye": "眼部射精",
+        "cum swap": "精液交換",
+        "cunnilingus": "舔鮑",
+        "cuntboy": "有陰道的男性",
+        "chloroform": "迷姦",
+
         "deepthroat": "深喉嚨",
         "defloration": "破處",
         "doujinshi": "同人誌",
+
         "exhibitionism": "露出",
+
         "facesitting": "顏面騎乘",
         "femdom": "女調教男",
+
         "lolicon": "蘿莉控"
     }
 }
