--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -102,7 +102,7 @@
         "bunny girl": "兔女郎",
         "burping": "打嗝",
         "business suit": "西裝",
-        "butler": "執事,男管家",
+        "butler": "執事",
 
         "cannibalism": "食人",
         "cashier": "店員",
