--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -32,6 +32,10 @@
             "Pages": "頁數:",
             "Uploaded": "上傳時間:"
         },
+        "btn": {
+            "BTdownload": "BT 下載",
+            "serachRelatedBookk": "搜尋相關本本"
+        },
         "ShowMoreImagesButton": "顯示更多",
         "ShowAllImagesButton": "顯示全部",
         "MoreLikeThis": "更多類似的",
@@ -60,93 +64,5 @@
             "Ago": "前"
         }
     },
-    "Tags": {
-        "abortion": "墮胎",
-        "anal": "肛交",
-        "armpit": "腋下",
-        "asphyxiation": "窒息式性愛",
-        "alien": "外星人",
-        "angel": "天使",
-
-        "bdsm": "皮繩愉虐",
-        "birth": "出產",
-        "big ass": "豐臀",
-        "big balls": "巨睪丸",
-        "big breasts": "巨乳",
-        "big clit": "大陰蒂",
-        "big lips": "厚嘴唇",
-        "big nipples": "大乳頭",
-        "big penis": "巨屌",
-        "big vagina": "大陰道",
-        "bike shorts": "緊身短褲",
-        "bikini": "比基尼",
-        "blind": "失明",
-        "blindfold": "蒙眼",
-        "blood": "血",
-        "bloomers": "燈籠褲",
-        "blowjob": "口交",
-        "body modification": "肉體改造",
-        "body painting": "人體彩繪",
-        "body swap": "身體交換",
-        "body writing": "身體寫字",
-        "bondage": "束縛",
-        "braces": "牙套",
-        "brain fuck": "腦姦",
-        "breast expansion": "脹奶",
-        "breast feeding": "哺乳",
-        "bride": "新娘",
-        "brother": "兄弟",
-        "bukkake": "大量發射",
-        "bull": "公牛",
-        "bunny boy": "兔男孩",
-        "bunny girl": "兔女郎",
-        "burping": "打嗝",
-        "business suit": "西裝",
-        "butler": "執事",
-
-        "cannibalism": "食人",
-        "cashier": "店員",
-        "catboy": "貓男孩",
-        "catfight": "兩女打鬥",
-        "catgirl": "貓娘",
-        "cbt": "cbt",
-        "centaur": "半人馬",
-        "cervix penetration": "子宮頸插入",
-        "chastity belt": "貞操帶",
-        "cheating": "偷情",
-        "cheerleader": "啦啦隊",
-        "chikan": "癡漢",
-        "chinese dress": "旗袍",
-        "christmas": "聖誕節",
-        "coach": "教練",
-        "cockslapping": "甩搧龜頭",
-        "collar": "項圈",
-        "compilation": "彙編",
-        "condom": "保險套",
-        "conjoined": "連體",
-        "coprophagia": "食糞",
-        "corruption": "墮落",
-        "corset": "馬甲",
-        "cosplaying": "角色扮演",
-        "cousin": "堂或表兄弟姐妹",
-        "cowgirl": "女牛仔",
-        "cowman": "牛男",
-        "crossdressing": "偽娘",
-        "cum in eye": "眼部射精",
-        "cum swap": "精液交換",
-        "cunnilingus": "舔鮑",
-        "cuntboy": "有陰道的男性",
-        "chloroform": "迷姦",
-
-        "deepthroat": "深喉嚨",
-        "defloration": "破處",
-        "doujinshi": "同人誌",
-
-        "exhibitionism": "露出",
-
-        "facesitting": "顏面騎乘",
-        "femdom": "女調教男",
-
-        "lolicon": "蘿莉控"
-    }
+    "Tags": {}
 }
