--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -64,5 +64,274 @@
             "Ago": "前"
         }
     },
-    "Tags": {}
+    "Tags": {
+        "abortion": "墮胎",
+        "absorption": "消化",
+        "age progression": "年齡增長",
+        "age regression": "幼兒化",
+        "ahegao": "阿嘿顏",
+        "alien": "外星人",
+        "alien girl": "外星女孩",
+        "all the way through": "全身貫通",
+        "already uploaded": "已上傳高畫質版",
+        "amputee": "截肢",
+        "anal": "肛交",
+        "angel": "天使",
+        "animated": "動畫",
+        "anorexic": "厭食症",
+        "anthology": "精選集",
+        "apron": "圍裙",
+        "armpit sex": "腋交",
+        "asphyxiation": "窒息",
+        "ass expansion": "臀部增大",
+        "assjob": "屁股摩擦",
+        "aunt": "阿姨,伯母,叔母,姑媽,舅媽,姨媽,嬸",
+        "autofellatio": "男性自我口交",
+        "autopaizuri": "扶他自我乳交",
+        "ball sucking": "舔蛋蛋",
+        "balljob": "睪丸摩擦 (說明是用睪丸作乳交?)",
+        "bandages": "繃帶",
+        "bear": "熊",
+        "bee girl": "蜜蜂女孩",
+        "bestiality": "獸姦",
+        "big areolae": "大乳暈",
+        "big balls": "大睪丸",
+        "big breasts": "波霸,大乳房",
+        "big clit": "大陰蒂",
+        "big nipples": "大乳頭",
+        "big vagina": "大陰道",
+        "bikini": "比基尼",
+        "blackmail": "恐嚇",
+        "blindfold": "蒙眼",
+        "blood": "血",
+        "bloomers": "燈籠褲",
+        "body painting": "人體彩繪",
+        "body swap": "身體交換",
+        "body writing": "人體寫字",
+        "bondage": "束縛",
+        "brain fuck": "腦姦",
+        "breast feeding": "哺乳",
+        "brother": "兄弟,哥哥或弟弟",
+        "bull": "公牛",
+        "bunny girl": "兔女郎",
+        "burping": "打嗝",
+        "business suit": "西裝",
+        "catfight": "兩女打鬥",
+        "cbt": "男根施虐",
+        "cervix penetration": "子宮頸插入",
+        "chastity belt": "貞操帶",
+        "cheating": "偷吃",
+        "chikan": "癡漢",
+        "chloroform": "迷姦",
+        "coach": "輔導,指導,教練",
+        "collar": "項圈",
+        "compilation": "彙編",
+        "condom": "保險套",
+        "conjoined": "連體",
+        "coprophagia": "食糞",
+        "corruption": "墮落",
+        "cosplaying": "角色扮演",
+        "cowgirl": "女牛仔",
+        "cowman": "牛男",
+        "cum swap": "精液交換",
+        "cunnilingus": "舔鮑",
+        "cuntboy": "有陰道的男性",
+        "dakimakura": "抱枕",
+        "dark nipples": "深色乳頭",
+        "daughter": "女兒",
+        "defloration": "破處（女性）",
+        "demon girl": "惡魔娘",
+        "dick growth": "陰蒂陰莖化",
+        "dickgirl on dickgirl": "有陰莖的女性角色(含扶他、變性人)",
+        "dickgirl on male": "有陰莖的女性角色(含扶他、變性人)",
+        "dinosaur": "恐龍",
+        "dog": "狗",
+        "dolphin": "海豚",
+        "double blowjob": "吃雙屌",
+        "double penetration": "兩根同時插入",
+        "dougi": "道服",
+        "ear fuck": "耳姦",
+        "eggs": "蛋",
+        "elf": "妖精",
+        "enema": "灌腸",
+        "eye penetration": "眼眶插入",
+        "eyepatch": "眼罩 （單眼用）",
+        "fairy": "小仙女,小妖精",
+        "farting": "排氣,放屁",
+        "father": "父親",
+        "femdom": "女調教男",
+        "ffm threesome": "兩女一男3",
+        "fingering": "指姦、手指插入",
+        "fisting": "拳交",
+        "foot insertion": "腳姦,足交（插入行為）",
+        "footjob": "足交（摩擦行為）",
+        "forniphilia": "人體傢俱",
+        "frog": "青蛙",
+        "frottage": "陰莖互相摩擦",
+        "full body tattoo": "全身刺青",
+        "full color": "全彩",
+        "furry": "擬人動物（美式）",
+        "gag": "口枷",
+        "gaping": "敞開陰部",
+        "ghost": "幽靈",
+        "giant": "巨人",
+        "giantess": "女巨人",
+        "glasses": "眼鏡",
+        "gorilla": "大猩猩",
+        "granddaughter": "孫女",
+        "grandfather": "爺爺",
+        "grandmother": "奶奶",
+        "growth": "成長",
+        "gyaru-oh": "潮男（gyaru 男性版）",
+        "hairy": "多毛",
+        "hardcore": "激烈性交",
+        "harpy": "鳥人",
+        "hijab": "一種蓋住頭部只露出臉部的頭巾",
+        "horse": "馬",
+        "horse cock": "馬屌",
+        "how to": "怎麼(這裡指如何繪製或設計一個教學系列圖)",
+        "huge penis": "巨屌(超過正常體型尺寸的誇張陰莖)",
+        "human pet": "人形寵物",
+        "impregnation": "注入、受精",
+        "inflation": "腹部鼓脹(懷孕、吞食、精液注入等)",
+        "insect": "昆蟲",
+        "inseki": "姻戚(親戚)",
+        "invisible": "透明人間",
+        "josou seme": "女裝的攻方",
+        "kappa": "河童",
+        "kigurumi": "布偶裝",
+        "kneepit sex": "膝後交",
+        "lab coat": "醫師白長袍、實驗衣(總用於女醫生、保健教師等類別)",
+        "latex": "緊身皮衣、塑膠衣",
+        "leg lock": "腿夾(性交時一方將腿環夾住另一方身體)",
+        "legjob": "腿部摩擦",
+        "living clothes": "家居服",
+        "lolicon": "蘿莉控",
+        "low bestiality": "低級的獸交",
+        "low shotacon": "低級的正太控",
+        "machine": "機器",
+        "maggot": "蛆",
+        "magical girl": "魔法少女",
+        "male on dickgirl": "男性插入有陰莖的女性角色(含扶他、變性人)",
+        "males only": "只有男性,限男性",
+        "masturbation": "自慰",
+        "merman": "人魚",
+        "metal armor": "金屬盔甲",
+        "midget": "侏儒",
+        "milf": "熟女交,熟女姦 (指30歲以上的單身或已婚熟女)(以台語講為幹老查某是幹你娘的某種變型)",
+        "milking": "擠奶",
+        "mind control": "催眠、精神控制",
+        "minotaur": "牛頭人",
+        "missing cover": "封面缺少",
+        "mmf threesome": "兩男一女3P(male-male-female)",
+        "monkey": "猴",
+        "monster": "人外,異種姦",
+        "moral degeneration": "道德價值觀崩壞",
+        "mother": "母親",
+        "mtf threesome": "一男一女一扶他3P(male-female-futanari)",
+        "multiple arms": "多手臂",
+        "multiple paizuri": "複數乳交",
+        "muscle": "肌肉系",
+        "nakadashi": "中出",
+        "nazi": "納粹(這裡指相關物品)",
+        "necrophilia": "戀屍癖、屍姦",
+        "niece": "侄女,甥女",
+        "nipple expansion": "乳頭增大",
+        "nipple fuck": "乳頭抽插",
+        "nose fuck": "鼻孔抽插",
+        "nurse": "護士",
+        "octopus": "章魚",
+        "old lady": "老女人",
+        "onahole": "自慰套 人造陰道,素肚",
+        "oppai loli": "胸部已發育之羅莉",
+        "orc": "半獸人",
+        "out of order": "篇幅不按順序,順序錯亂 ",
+        "pantyjob": "隔著內褲摩擦生殖器",
+        "parasite": "寄生",
+        "pasties": "胸貼",
+        "pegging": "女方戴假陽具插男性",
+        "petplay": "扮演動物",
+        "phone sex": "電愛",
+        "piercing": "環姐",
+        "pillory": "頸手枷",
+        "piss drinking": "飲尿",
+        "pole dancing": "鋼管舞",
+        "policewoman": "女警",
+        "poor grammar": "內容或語法有錯誤",
+        "pregnant": "懷孕,西瓜肚",
+        "prolapse": "子宮或直腸脫垂",
+        "prostate massage": "前列腺按摩",
+        "pubic stubble": "陰毛稀少",
+        "rabbit": "兔子(兔女郎?)",
+        "race queen": "賽車女郎",
+        "randoseru": "小學生書包",
+        "realporn": "真實的色情(現實真正發生的)",
+        "replaced": "更換(把目前的低解析度圖換成更好的高解析度的圖)",
+        "rimjob": "舔肛",
+        "saliva": "唾液",
+        "scar": "傷疤",
+        "school swimsuit": "學校泳衣",
+        "schoolgirl uniform": "女學生制服",
+        "scrotal lingerie": "陰囊內衣",
+        "selfcest": "自攻自受",
+        "sex toys": "性玩具",
+        "shibari": "繩縛",
+        "shotacon": "正太控",
+        "skinsuit": "皮物(某人穿上另一人形之人皮衣)",
+        "slave": "奴隸",
+        "sleeping": "睡姦",
+        "slime": "史萊姆",
+        "slug": "軟體動物,如蛞蝓",
+        "smegma": "恥垢、包皮垢",
+        "snake": "蛇(任何類型的蛇類)",
+        "snuff": "被人造物、機械或野獸殺害",
+        "sole male": "作品中僅有一名男性角色",
+        "spanking": "拍打屁股",
+        "speculum": "內診器、鴨嘴器(將陰道或肛門撐開檢診的醫療工具)",
+        "spider": "蜘蛛",
+        "squid girl": "花枝娘,イカ娘",
+        "story arc": "長篇劇情作",
+        "stretching": "肉體擴張(至人體極限)",
+        "sumata": "素股(女性以腿夾住陰莖模擬性交但不插入)",
+        "sundress": "背心裙",
+        "sweating": "流汗",
+        "swimsuit": "泳裝",
+        "swinging": "擺動(對於第三方或雙方其中一方發生性關係)",
+        "syringe": "注射器、針筒",
+        "tailjob": "用尾巴自慰或作愛",
+        "tankoubon": "單行本",
+        "teacher": "教師",
+        "thigh high boots": "過膝長筒靴",
+        "tickling": "搔癢,撓養",
+        "tights": "貼身襯衣,緊身衣(指半套全身覆蓋不完全的衣褲,如小可愛.連褲襪)",
+        "time stop": "時間暫停",
+        "tomgirl": "女同性戀中仍扮演女方者",
+        "torture": "拷打,拷問;折磨",
+        "trampling": "踐踏(有上下關係,指上位者對下位者用腳踩踏)",
+        "triple anal": "一肛三棒",
+        "ttf threesome": "扶他3P (futanari-futanari-female or futanari-futanari-futanari 一女二扶他或三扶他)",
+        "tube": "管狀物",
+        "turtle": "龜(這裡指忍者龜)",
+        "tutor": "個別指導(家教)",
+        "unbirth": "入腹(指進入肚子把肚子撐大)",
+        "uncle": "叔叔",
+        "underwater": "水下(在性交時大部分或完全浸沒在液體中)",
+        "unicorn": "獨角獸",
+        "unusual teeth": "不正常的牙齒(比如鋸齒狀)",
+        "urethra insertion": "尿道插入",
+        "urination": "排尿",
+        "vaginal sticker": "陰道貼紙",
+        "vomit": "嘔吐",
+        "vore": "吞食",
+        "waitress": "女服務生",
+        "widow": "寡婦、未亡人",
+        "witch": "女巫",
+        "wolf": "狼 (狼人?)",
+        "wooden horse": "三角木馬",
+        "wormhole": "蟲洞",
+        "x-ray": "內視圖(透視xx、oo或喉嚨..等)",
+        "yaoi": "男同性戀",
+        "yukkuri": "東方饅頭(一個碩大而看上去有點扭曲的腦袋)",
+        "zombie": "殭屍"
+    }
 }
