--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -34,7 +34,7 @@
         },
         "btn": {
             "BTdownload": "BT 下載",
-            "serachRelatedBookk": "搜尋相關本本"
+            "serachRelatedBook": "搜尋相關本本"
         },
         "ShowMoreImagesButton": "顯示更多",
         "ShowAllImagesButton": "顯示全部",
