--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -53,6 +53,8 @@
             "Year": "年",
             "Months": "月",
             "Month": "月",
+            "Weeks": "週",
+            "Week": "週",
             "Days": "天",
             "Day": "天",
             "Hours": "小時",
