更新&修正 標籤翻譯

--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -79,262 +79,447 @@
         "already uploaded": "已上傳高畫質版",
         "amputee": "截肢",
         "anal": "肛交",
+        "anal birth": "肛門出生",
         "angel": "天使",
         "animated": "動畫",
         "anorexic": "厭食症",
         "anthology": "精選集",
         "apron": "圍裙",
+        "armpit licking": "舔腋",
         "armpit sex": "腋交",
         "asphyxiation": "窒息",
         "ass expansion": "臀部增大",
         "assjob": "屁股摩擦",
-        "aunt": "阿姨,伯母,叔母,姑媽,舅媽,姨媽,嬸",
+        "aunt": "阿姨",
         "autofellatio": "男性自我口交",
         "autopaizuri": "扶他自我乳交",
         "ball sucking": "舔蛋蛋",
-        "balljob": "睪丸摩擦 (說明是用睪丸作乳交?)",
+        "balljob": "睪丸摩擦",
+        "balls expansion": "膨脹的睪丸",
         "bandages": "繃帶",
+        "bandaid": "OK繃、創可貼",
+        "bdsm": "皮繩愉虐、綁縛性調教",
         "bear": "熊",
         "bee girl": "蜜蜂女孩",
         "bestiality": "獸姦",
         "big areolae": "大乳暈",
-        "big balls": "大睪丸",
-        "big breasts": "波霸,大乳房",
+        "big ass": "豐臀",
+        "big balls": "巨睪丸",
+        "big breasts": "巨乳",
         "big clit": "大陰蒂",
+        "big lips": "大嘴唇",
         "big nipples": "大乳頭",
+        "big penis": "大屌",
         "big vagina": "大陰道",
+        "bike shorts": "緊身短褲",
         "bikini": "比基尼",
+        "birth": "出產",
         "blackmail": "恐嚇",
+        "blind": "失明",
         "blindfold": "蒙眼",
         "blood": "血",
         "bloomers": "燈籠褲",
+        "blowjob": "口交",
+        "body modification": "肉體改造",
         "body painting": "人體彩繪",
         "body swap": "身體交換",
         "body writing": "人體寫字",
         "bondage": "束縛",
+        "braces": "牙套",
         "brain fuck": "腦姦",
+        "breast expansion": "脹奶",
         "breast feeding": "哺乳",
-        "brother": "兄弟,哥哥或弟弟",
+        "bride": "新娘",
+        "brother": "兄弟",
+        "bukkake": "大量發射",
         "bull": "公牛",
+        "bunny boy": "兔男孩",
         "bunny girl": "兔女郎",
         "burping": "打嗝",
         "business suit": "西裝",
+        "butler": "男管家",
+        "cannibalism": "食人",
+        "cashier": "店員",
+        "catboy": "貓男孩",
         "catfight": "兩女打鬥",
+        "catgirl": "貓娘",
         "cbt": "男根施虐",
+        "centaur": "半人馬",
         "cervix penetration": "子宮頸插入",
         "chastity belt": "貞操帶",
         "cheating": "偷吃",
+        "cheerleader": "啦啦隊",
         "chikan": "癡漢",
+        "chinese dress": "旗袍",
         "chloroform": "迷姦",
-        "coach": "輔導,指導,教練",
+        "christmas": "聖誕",
+        "coach": "教練",
+        "cockslapping": "甩搧龜頭",
         "collar": "項圈",
         "compilation": "彙編",
         "condom": "保險套",
         "conjoined": "連體",
         "coprophagia": "食糞",
         "corruption": "墮落",
+        "corset": "馬甲",
         "cosplaying": "角色扮演",
+        "cousin": "堂或表兄弟姐妹",
         "cowgirl": "女牛仔",
         "cowman": "牛男",
+        "crossdressing": "偽娘",
+        "cum in eye": "對眼部射精",
         "cum swap": "精液交換",
         "cunnilingus": "舔鮑",
         "cuntboy": "有陰道的男性",
         "dakimakura": "抱枕",
         "dark nipples": "深色乳頭",
+        "dark skin": "黑肉",
         "daughter": "女兒",
         "defloration": "破處（女性）",
+        "demon": "惡魔",
         "demon girl": "惡魔娘",
+        "diaper": "尿布",
         "dick growth": "陰蒂陰莖化",
-        "dickgirl on dickgirl": "有陰莖的女性角色(含扶他、變性人)",
-        "dickgirl on male": "有陰莖的女性角色(含扶他、變性人)",
+        "dickgirl on dickgirl": "有陰莖的女性角色",
+        "dickgirl on male": "有陰莖的女性角色",
+        "dilf": "中年大叔",
         "dinosaur": "恐龍",
         "dog": "狗",
+        "doll joints": "有關節的公仔",
         "dolphin": "海豚",
+        "double anal": "一肛兩棒",
         "double blowjob": "吃雙屌",
         "double penetration": "兩根同時插入",
         "dougi": "道服",
+        "dragon": "龍",
+        "drugs": "打藥",
+        "drunk": "酒醉",
         "ear fuck": "耳姦",
+        "eel": "鰻魚",
         "eggs": "蛋",
+        "electric shocks": "電擊",
         "elf": "妖精",
+        "emotionless sex": "展示性交 （無表情、感情）",
         "enema": "灌腸",
+        "exhibitionism": "露出",
         "eye penetration": "眼眶插入",
-        "eyepatch": "眼罩 （單眼用）",
-        "fairy": "小仙女,小妖精",
-        "farting": "排氣,放屁",
+        "eyepatch": "眼罩",
+        "facesitting": "顏面騎乘",
+        "fairy": "妖精",
+        "farting": "放屁",
         "father": "父親",
+        "females only": "只有女性",
         "femdom": "女調教男",
+        "feminization": "女性化",
         "ffm threesome": "兩女一男3",
+        "fft threesome": "兩女一扶他",
+        "filming": "拍攝",
         "fingering": "指姦、手指插入",
+        "first person perspective": "第一人稱視角",
         "fisting": "拳交",
-        "foot insertion": "腳姦,足交（插入行為）",
+        "foot insertion": "腳姦、足交（插入行為）",
+        "foot licking": "舐足",
         "footjob": "足交（摩擦行為）",
+        "forbidden content": "禁止內容（R18G、極端BDSM、幼童）",
         "forniphilia": "人體傢俱",
+        "fox": "狐狸",
+        "freckles": "雀斑",
         "frog": "青蛙",
         "frottage": "陰莖互相摩擦",
         "full body tattoo": "全身刺青",
+        "full censorship": "生殖器完全遮蓋的馬賽克",
         "full color": "全彩",
+        "fundoshi": "褌、兜檔布",
         "furry": "擬人動物（美式）",
+        "futanari": "扶他",
         "gag": "口枷",
         "gaping": "敞開陰部",
+        "garter belt": "吊帶襪",
+        "gasmask": "防毒面具",
+        "gender bender": "性別交換",
         "ghost": "幽靈",
         "giant": "巨人",
         "giantess": "女巨人",
+        "gijinka": "擬人化",
         "glasses": "眼鏡",
+        "glory hole": "尋歡洞",
+        "goblin": "哥布林",
+        "gokkun": "吞精",
         "gorilla": "大猩猩",
+        "gothic lolita": "哥德羅莉",
         "granddaughter": "孫女",
         "grandfather": "爺爺",
         "grandmother": "奶奶",
+        "group": "群交",
         "growth": "成長",
+        "guro": "獵奇",
+        "gyaru": "辣妹",
         "gyaru-oh": "潮男（gyaru 男性版）",
+        "gymshorts": "運動短褲",
+        "hairjob": "髮交",
         "hairy": "多毛",
+        "handicapped": "有殘疾的人",
+        "handjob": "手淫",
         "hardcore": "激烈性交",
+        "harem": "後宮",
         "harpy": "鳥人",
-        "hijab": "一種蓋住頭部只露出臉部的頭巾",
+        "hijab": "面紗",
         "horse": "馬",
         "horse cock": "馬屌",
-        "how to": "怎麼(這裡指如何繪製或設計一個教學系列圖)",
-        "huge penis": "巨屌(超過正常體型尺寸的誇張陰莖)",
+        "hotpants": "熱褲",
+        "how to": "教學",
+        "huge breasts": "巨乳（超出正常尺寸）",
+        "huge penis": "巨屌（超出正常尺寸）",
+        "human cattle": "人牛（肉便器集中區）",
         "human pet": "人形寵物",
+        "humiliation": "羞辱",
         "impregnation": "注入、受精",
-        "inflation": "腹部鼓脹(懷孕、吞食、精液注入等)",
+        "incest": "近親相姦",
+        "incomplete": "缺頁",
+        "infantilism": "幼兒扮演",
+        "inflation": "腹部鼓脹",
         "insect": "昆蟲",
-        "inseki": "姻戚(親戚)",
+        "inseki": "親戚",
+        "inverted nipples": "凹陷乳頭",
         "invisible": "透明人間",
         "josou seme": "女裝的攻方",
         "kappa": "河童",
         "kigurumi": "布偶裝",
+        "kimono": "和服",
+        "kissing": "接吻",
         "kneepit sex": "膝後交",
-        "lab coat": "醫師白長袍、實驗衣(總用於女醫生、保健教師等類別)",
+        "kunoichi": "女忍者",
+        "lab coat": "醫師白長袍",
+        "lactation": "哺乳",
+        "large insertions": "巨根",
         "latex": "緊身皮衣、塑膠衣",
-        "leg lock": "腿夾(性交時一方將腿環夾住另一方身體)",
+        "layer cake": "夾心鮑（兩鮑夾一棒）",
+        "leg lock": "腿夾",
         "legjob": "腿部摩擦",
+        "leotard": "緊身衣",
+        "lingerie": "女性情趣內衣",
         "living clothes": "家居服",
         "lolicon": "蘿莉控",
+        "long tongue": "長舌頭",
         "low bestiality": "低級的獸交",
+        "low lolicon": "低級的羅莉控",
         "low shotacon": "低級的正太控",
         "machine": "機器",
         "maggot": "蛆",
         "magical girl": "魔法少女",
-        "male on dickgirl": "男性插入有陰莖的女性角色(含扶他、變性人)",
-        "males only": "只有男性,限男性",
+        "maid": "女僕",
+        "male on dickgirl": "男性插入有陰莖的女性",
+        "males only": "只有男性",
+        "masked face": "蒙面",
         "masturbation": "自慰",
+        "mature": "熟女",
+        "menstruation": "月經",
+        "mermaid": "美人魚",
         "merman": "人魚",
         "metal armor": "金屬盔甲",
         "midget": "侏儒",
-        "milf": "熟女交,熟女姦 (指30歲以上的單身或已婚熟女)(以台語講為幹老查某是幹你娘的某種變型)",
+        "miko": "巫女",
+        "milf": "熟女姦",
+        "military": "軍事相關、軍人",
         "milking": "擠奶",
+        "mind break": "精神崩壞",
         "mind control": "催眠、精神控制",
         "minotaur": "牛頭人",
         "missing cover": "封面缺少",
-        "mmf threesome": "兩男一女3P(male-male-female)",
+        "mmf threesome": "兩男一女3P",
+        "mmt threesome": "兩男一扶他3P",
         "monkey": "猴",
-        "monster": "人外,異種姦",
+        "monkey girl": "猴女孩",
+        "monster": "異種姦",
+        "monster girl": "人外娘、魔物娘",
         "moral degeneration": "道德價值觀崩壞",
+        "mosaic censorship": "馬賽克",
         "mother": "母親",
-        "mtf threesome": "一男一女一扶他3P(male-female-futanari)",
+        "mtf threesome": "一男一女一扶他3P",
+        "multi-work series": "系列作",
         "multiple arms": "多手臂",
+        "multiple breasts": "一人多乳",
         "multiple paizuri": "複數乳交",
+        "multiple penises": "一人多屌",
         "muscle": "肌肉系",
         "nakadashi": "中出",
-        "nazi": "納粹(這裡指相關物品)",
+        "navel fuck": "肚臍交",
+        "nazi": "納粹相關物品",
         "necrophilia": "戀屍癖、屍姦",
-        "niece": "侄女,甥女",
+        "netorare": "NTR",
+        "niece": "侄女",
+        "ninja": "忍者",
+        "nipple birth": "乳頭出生",
         "nipple expansion": "乳頭增大",
         "nipple fuck": "乳頭抽插",
+        "non nude": "非裸體",
         "nose fuck": "鼻孔抽插",
+        "nose hook": "鼻鉤",
+        "nun": "修女",
         "nurse": "護士",
         "octopus": "章魚",
+        "oil": "潤滑劑、黏液、油",
         "old lady": "老女人",
-        "onahole": "自慰套 人造陰道,素肚",
+        "old man": "老人",
+        "onahole": "自慰套",
+        "oni": "日本惡鬼",
         "oppai loli": "胸部已發育之羅莉",
         "orc": "半獸人",
-        "out of order": "篇幅不按順序,順序錯亂 ",
+        "orgasm denial": "射精禁止",
+        "out of order": "篇幅不按順序、順序錯亂",
+        "paizuri": "乳交",
+        "pantyhose": "連褲襪",
         "pantyjob": "隔著內褲摩擦生殖器",
         "parasite": "寄生",
         "pasties": "胸貼",
         "pegging": "女方戴假陽具插男性",
+        "penis birth": "長出陰莖",
         "petplay": "扮演動物",
+        "petrification": "石化、固化",
+        "phimosis": "包莖",
         "phone sex": "電愛",
         "piercing": "環姐",
+        "pig": "豬",
         "pillory": "頸手枷",
         "piss drinking": "飲尿",
         "pole dancing": "鋼管舞",
+        "policeman": "男警",
         "policewoman": "女警",
+        "ponygirl": "女性咬住馬銜的裝扮",
         "poor grammar": "內容或語法有錯誤",
-        "pregnant": "懷孕,西瓜肚",
+        "possession": "憑依",
+        "pregnant": "懷孕、西瓜肚",
+        "prehensile hair": "生體髮、觸手髮",
         "prolapse": "子宮或直腸脫垂",
         "prostate massage": "前列腺按摩",
+        "prostitution": "賣淫、風俗",
         "pubic stubble": "陰毛稀少",
-        "rabbit": "兔子(兔女郎?)",
+        "public use": "公用",
+        "rabbit": "兔子",
         "race queen": "賽車女郎",
         "randoseru": "小學生書包",
-        "realporn": "真實的色情(現實真正發生的)",
-        "replaced": "更換(把目前的低解析度圖換成更好的高解析度的圖)",
+        "rape": "強姦",
+        "realporn": "真實色情",
+        "redraw": "重繪",
+        "replaced": "已更換更高解析度",
+        "reptile": "爬蟲類",
         "rimjob": "舔肛",
+        "robot": "機器人",
+        "ryona": "凌虐",
         "saliva": "唾液",
+        "sample": "樣本",
+        "scanmark": "浮水印",
         "scar": "傷疤",
+        "scat": "排泄物",
         "school swimsuit": "學校泳衣",
+        "schoolboy uniform": "男學生制服",
         "schoolgirl uniform": "女學生制服",
+        "screenshots": "截圖",
         "scrotal lingerie": "陰囊內衣",
         "selfcest": "自攻自受",
         "sex toys": "性玩具",
+        "shared senses": "同感",
+        "sheep": "羊",
+        "shemale": "擁有陰莖但沒有陰道的女性",
         "shibari": "繩縛",
+        "shimapan": "橫條紋內褲",
         "shotacon": "正太控",
-        "skinsuit": "皮物(某人穿上另一人形之人皮衣)",
+        "shrinking": "人體縮小",
+        "sister": "姊妹",
+        "skinsuit": "皮衣",
         "slave": "奴隸",
         "sleeping": "睡姦",
         "slime": "史萊姆",
-        "slug": "軟體動物,如蛞蝓",
+        "slug": "軟體動物",
+        "small breasts": "貧乳",
         "smegma": "恥垢、包皮垢",
-        "snake": "蛇(任何類型的蛇類)",
+        "smoking": "抽菸",
+        "snake": "蛇",
+        "snake girl": "蛇娘",
         "snuff": "被人造物、機械或野獸殺害",
+        "sole female": "作品中僅有一名女性角色",
         "sole male": "作品中僅有一名男性角色",
+        "solo action": "單獨活動",
         "spanking": "拍打屁股",
-        "speculum": "內診器、鴨嘴器(將陰道或肛門撐開檢診的醫療工具)",
+        "speculum": "內診器",
         "spider": "蜘蛛",
-        "squid girl": "花枝娘,イカ娘",
+        "spider girl": "蜘蛛女",
+        "squid girl": "花枝娘",
+        "squirting": "潮吹",
+        "stewardess": "乘服員",
+        "stockings": "絲襪、過膝襪",
+        "stomach deformation": "腹部變形",
         "story arc": "長篇劇情作",
-        "stretching": "肉體擴張(至人體極限)",
-        "sumata": "素股(女性以腿夾住陰莖模擬性交但不插入)",
+        "strap-on": "穿戴式假陽具",
+        "stretching": "肉體擴張",
+        "stuck in wall": "嵌於牆壁",
+        "sumata": "素股",
         "sundress": "背心裙",
+        "sunglasses": "太陽眼鏡",
         "sweating": "流汗",
         "swimsuit": "泳裝",
-        "swinging": "擺動(對於第三方或雙方其中一方發生性關係)",
         "syringe": "注射器、針筒",
+        "table masturbation": "磨桌腳自慰",
         "tailjob": "用尾巴自慰或作愛",
         "tankoubon": "單行本",
+        "tanlines": "曬痕",
         "teacher": "教師",
         "thigh high boots": "過膝長筒靴",
-        "tickling": "搔癢,撓養",
-        "tights": "貼身襯衣,緊身衣(指半套全身覆蓋不完全的衣褲,如小可愛.連褲襪)",
+        "tiara": "頭冠、皇冠",
+        "tickling": "搔癢",
+        "tiger": "虎（貓科動物）",
+        "tights": "貼身襯衣、緊身衣",
         "time stop": "時間暫停",
+        "tomboy": "女同志",
         "tomgirl": "女同性戀中仍扮演女方者",
-        "torture": "拷打,拷問;折磨",
-        "trampling": "踐踏(有上下關係,指上位者對下位者用腳踩踏)",
+        "tooth brushing": "用屌刷牙",
+        "torture": "拷問",
+        "tracksuit": "連身工作服",
+        "trampling": "踐踏",
+        "transformation": "轉變",
+        "tribadism": "磨豆腐",
         "triple anal": "一肛三棒",
-        "ttf threesome": "扶他3P (futanari-futanari-female or futanari-futanari-futanari 一女二扶他或三扶他)",
+        "triple penetration": "三根同時插入",
+        "triple vaginal": "一穴三棒",
+        "ttf threesome": "扶他3P",
+        "ttm threesome": "扶他3P",
         "tube": "管狀物",
-        "turtle": "龜(這裡指忍者龜)",
-        "tutor": "個別指導(家教)",
-        "unbirth": "入腹(指進入肚子把肚子撐大)",
+        "turtle": "烏龜",
+        "tutor": "家教",
+        "twins": "雙胞胎",
+        "unbirth": "入腹",
+        "uncensored": "無碼",
         "uncle": "叔叔",
-        "underwater": "水下(在性交時大部分或完全浸沒在液體中)",
+        "underwater": "水下",
         "unicorn": "獨角獸",
-        "unusual teeth": "不正常的牙齒(比如鋸齒狀)",
+        "unusual pupils": "異瞳",
+        "unusual teeth": "不正常的牙齒",
         "urethra insertion": "尿道插入",
         "urination": "排尿",
+        "vacbed": "橡膠真空床",
         "vaginal sticker": "陰道貼紙",
+        "vampire": "吸血鬼",
+        "virginity": "破處（專指男性）",
         "vomit": "嘔吐",
         "vore": "吞食",
+        "voyeurism": "偷窺癖",
+        "waiter": "男服務生",
         "waitress": "女服務生",
+        "weight gain": "增加體重 ",
+        "whip": "鞭笞",
         "widow": "寡婦、未亡人",
+        "widower": "鰥夫",
         "witch": "女巫",
-        "wolf": "狼 (狼人?)",
+        "wolf": "狼",
         "wooden horse": "三角木馬",
+        "worm": "蠕蟲",
         "wormhole": "蟲洞",
-        "x-ray": "內視圖(透視xx、oo或喉嚨..等)",
+        "wrestling": "摔角",
+        "x-ray": "內視圖",
+        "yandere": "病嬌",
         "yaoi": "男同性戀",
-        "yukkuri": "東方饅頭(一個碩大而看上去有點扭曲的腦袋)",
+        "yukkuri": "東方饅頭",
+        "yuri": "百合",
         "zombie": "殭屍"
     }
 }
